// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: SyntaxHighlighter should match snapshot 1`] = `
<div>
  <pre
    class="css-lrw80b"
  >
    <code
      class="language-javascript css-38t3yv"
    >
      <span
        class="hljs-variable language_ css-1yz7e9k"
        style="color: rgb(171, 86, 86);"
      >
        <span>
          console
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          .
        </span>
      </span>
      <span
        class="hljs-title function_ css-1yz7e9k"
        style="color: rgb(136, 0, 0); font-weight: bold;"
      >
        <span>
          log
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          (
        </span>
      </span>
      <span
        class="hljs-string css-1yz7e9k"
        style="color: rgb(136, 0, 0);"
      >
        <span>
          "Hello World"
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          )
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`Components: SyntaxHighlighter should match snapshot when styleName is not defaultStyle 1`] = `
<div>
  <pre
    class="css-qy0ydq"
  >
    <code
      class="language-javascript css-38t3yv"
    >
      <span
        class="hljs-variable language_ css-1yz7e9k"
        style="color: rgb(255, 160, 122);"
      >
        <span>
          console
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          .
        </span>
      </span>
      <span
        class="hljs-title function_ css-1yz7e9k"
        style="color: rgb(0, 224, 224);"
      >
        <span>
          log
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          (
        </span>
      </span>
      <span
        class="hljs-string css-1yz7e9k"
        style="color: rgb(171, 227, 56);"
      >
        <span>
          "Hello World"
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          )
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`Components: SyntaxHighlighter should match snapshot when wrapLines is true 1`] = `
<div>
  <pre
    class="css-lrw80b"
  >
    <code
      class="language-javascript css-1f4c3m9"
    >
      <span
        class="hljs-variable language_ css-1yz7e9k"
        style="color: rgb(171, 86, 86);"
      >
        <span>
          console
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          .
        </span>
      </span>
      <span
        class="hljs-title function_ css-1yz7e9k"
        style="color: rgb(136, 0, 0); font-weight: bold;"
      >
        <span>
          log
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          (
        </span>
      </span>
      <span
        class="hljs-string css-1yz7e9k"
        style="color: rgb(136, 0, 0);"
      >
        <span>
          "Hello World"
        </span>
      </span>
      <span
        class="css-1yz7e9k"
      >
        <span>
          )
        </span>
      </span>
    </code>
  </pre>
</div>
`;
